# thegamebot

./: .gitignore  README.md  main.bat  main.py  pyproject.toml  requirements.txt  runloop.bat  runloop.ps1  runloop.sh  settings.json
bot/: __init__.py  checks.py  converters.py  errors.py  eventhandlers.py  settings.py  settings_default.ini  settings_default.json  test.py  utils.py
bot/classes/: confirmation.py  get_reaction.py  paginator.py  timeobj.py
bot/classes/games/: blackjack.py  multimath.py
bot/cogs/: administrative.py  background.py  ciphers.py  dbevents.py  economy.py  eh.py  embedding.py  gamecog.py  games.py  graphing.py  guildirish.py  guildsignal.py  helpcommand.py  images.py  info.py  invitetracker.py  ipc.py  mathematics.py  messagetracker.py  moderation.py  notes.py  owner.py  prefix.py  prog.py  randomization.py  reminders.py  settings.py  tags.py  test.py  timezones.py  undefined.py  uptime.py
bot/cogs/games/: __init__.py  hangman.py  memory.py  minesweeper.py  rps.py
bot/cogs/guildclub/: __init__.py  roles.py  suggestions.py
bot/cogs/guildsignal/: __init__.py  giveaway.py  rcon.py  status.py  whitelist.py
bot/cogs/slash/: __init__.py  games.py  test.py
bot/cogs/tags/: __init__.py  querier.py
bot/commands/: administrative.py  background.py  ciphers.py  embedding.py  embedtools.py  games.py  graphing.py  guildirish.py  helpcommand.py  images.py  info.py  ipc.py  mathematics.py  nocategory.py  notes.py  prefix.py  randomization.py  reminders.py  undefined.py  uptime.py
bot/database/: __init__.py  currencydatabase.py  database.py  dbsetup.py  gamedatabase.py  guilddatabase.py  irishdatabase.py  mixin.py  notedatabase.py  prefixdatabase.py  reminderdatabase.py  tagdatabase.py  userdatabase.py
bot/other/: discordlogger.py  mathparser.py
bot/utils/: __init__.py  arithmetic.py  confirmation.py  dt.py  exceptions.py  files.py  formatting.py  money.py  paging.py  parsing.py  shorthand.py
data/: cleanup_sql.bat  discord.mplstyle  recipewriter.py  refactorer.py  thegamebot.sql  unturned_item_ids.csv  unturned_recipes.json
webserver/: webserver.py
webserver/static/css/: styles.css
webserver/templates/: base.html  index.html  shutdown.html
