[tool.poetry]
name = "thegamebot"
version = "2.0.0"
description = ""
authors = ["thegamecracks"]
license = "MPLv2.0"

[tool.poetry.dependencies]
python = "^3.10"
asqlite = {git = "https://github.com/Rapptz/asqlite", rev = "cbe4ebb86c6d5c60f96576c27cc6e4edcf4618cd"}
dateparser = "^1.1.0"
"discord.py" = "^2.0.0"
humanize = "^4.6.0"
inflect = "^6.0.4"
jishaku = "^2.5.2"
matplotlib = "^3.5.1"
numpy = "^1.22.2"
Pint = "^0.21"
psutil = "^5.8.0"
pydantic = "^1.10"  # Fix 2.0 incompatibility with inflect
python-dateutil = "^2.8.2"
python-dotenv = "^1.0.0"
rapidfuzz = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
